--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
+			<!--<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${jacoco.version}</version>
@@ -94,7 +94,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>-->
 
 			<!-- <plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
